<resources>
    <string name="app_name">ESP</string>
    <string name="esp_lib_text_light" translatable="false">light</string>
    <string name="esp_lib_text_regular" translatable="false">regular</string>
    <string name="esp_lib_text_bold" translatable="false">bold</string>
    <string name="esp_lib_text_semibold" translatable="false">semibold</string>
    <string name="esp_lib_text_heavy" translatable="false">heavy</string>
    <string name="esp_lib_text_flaticon" translatable="false">flaticon.ttf</string>
    <string name="esp_lib_text_font_medium" translatable="false">lato/lato_medium.ttf</string>
    <string name="esp_lib_text_font_regular" translatable="false">lato/lato_regular.ttf</string>
    <string name="esp_lib_text_font_bold" translatable="false">lato/lato_bold.ttf</string>
    <string name="esp_lib_text_font_heavy" translatable="false">lato/lato_heavy.ttf</string>
    <string name="esp_lib_text_font_semibold" translatable="false">lato/lato_semibold.ttf</string>
    <string name="esp_lib_text_font_light_dubai" translatable="false">dubai/dubai_medium.ttf</string>
    <string name="esp_lib_text_font_regular_dubai" translatable="false">dubai/dubai_regular.ttf</string>
    <string name="esp_lib_text_font_bold_dubai" translatable="false">dubai/dubai_bold.ttf</string>
    <string name="esp_lib_text_font_default_name" translatable="false">Default</string>
    <string name="esp_lib_text_font_lato_medium_name" translatable="false">Lato medium</string>
    <string name="esp_lib_text_font_lato_bold_name" translatable="false">Lato bold</string>
    <string name="esp_lib_text_font_lato_heavy_name" translatable="false">Lato Heavy</string>
    <string name="esp_lib_text_font_lato_regular_name" translatable="false">Lato regular</string>
    <string name="esp_lib_text_font_default" translatable="false">greatvibes_regular.otf</string>
    <string name="esp_lib_text_font_lato_medium" translatable="false">lato_medium.ttf</string>
    <string name="esp_lib_text_font_lato_bold" translatable="false">lato_bold.ttf</string>
    <string name="esp_lib_text_font_lato_heavy" translatable="false">lato_heavy.ttf</string>
    <string name="esp_lib_text_font_lato_regular" translatable="false">lato_regular.ttf</string>
    <string name="esp_lib_text_sign_in">Sign In</string>
    <string name="esp_lib_text_login" translatable="false">Login</string>
    <string name="esp_lib_text_logineithidenedi">Login with IDENEDI</string>
    <string name="esp_lib_text_login_email_label">Email</string>
    <string name="esp_lib_text_login_valid_email_error">Please enter a valid email</string>
    <string name="esp_lib_text_login_email_error">Please enter email</string>
    <string name="esp_lib_text_login_password_label">Password</string>
    <string name="esp_lib_text_login_valid_password_error">Please enter password</string>
    <string name="esp_lib_text_length_password_error">Password must contain minimum 6 characters</string>
    <string name="esp_lib_text_internet_error_heading">No internet</string>
    <string name="esp_lib_text_internet_connection_error">No internet connectivity, please check your internet connection and try again</string>
    <string name="esp_lib_text_login_label">Login</string>
    <string name="esp_lib_text_choose_organization">Please select account from below</string>
    <string name="esp_lib_text_some_thing_went_wrong">Something went wrong, please try again </string>
    <string name="esp_lib_text_need_to_verify" translatable="false">We need to verify your identity to further proceed</string>
    <string name="esp_lib_text_norecordstofilter">No records to filter</string>
    <string name="esp_lib_text_notacceptrequest">We are currently not accepting applications for </string>
    <string name="esp_lib_text_contactadministrator">Please try again later or contact your system administrator for more details.</string>
    <string name="esp_lib_text_closingdatepassed">The closing date for accepting applications has passed</string>
    <string name="esp_lib_text_login_error">Incorrect Login ID or Password!</string>
    <string name="esp_lib_text_login_error_account_locked">Your account is locked.</string>
    <string name="esp_lib_text_login_error_remaining3">Invalid credentials. You have 3 more attempts before your account gets locked out.</string>
    <string name="esp_lib_text_login_error_remaining2">Invalid credentials. You have 2 more attempts before your account gets locked out.</string>
    <string name="esp_lib_text_login_error_remaining1">Invalid credentials. You have 1 more attempt before your account gets locked out.</string>
    <string name="esp_lib_text_login_error_locked">Invalid credentials. Your account has been locked out for 30 minutes due to multiple failed login attempts</string>
    <string name="esp_lib_text_applicant_error">You are not an Applicant.</string>
    <string name="esp_lib_text_welcome">Welcome</string>
    <string name="esp_lib_text_navigation_drawer_open">Open filter</string>
    <string name="esp_lib_text_navigation_drawer_close">Close filter</string>
    <string name="esp_lib_text_no">No</string>
    <string name="esp_lib_text_font" translatable="false">Font</string>
    <string name="esp_lib_text_upload" translatable="false">Upload</string>
    <string name="esp_lib_text_select_font_style" translatable="false">Select Font style</string>
    <string name="esp_lib_text_added">Added</string>
    <string name="esp_lib_text_startsubmittingapp">Start by submitting your first </string>
    <string name="esp_lib_text_itseasy">. Its easy and take less than 2 minutes, we promise!</string>
    <string name="esp_lib_text_my">My</string>
    <string name="esp_lib_text_my_space">My Space</string>
    <string name="esp_lib_text_search_">Search</string>
    <string name="esp_lib_text_profile_error_heading">Incomplete Profile</string>
    <string name="esp_lib_text_profile_error_desc">Uh-oh, you can\'t submit request until you fill your profile!</string>
    <string name="esp_lib_text_profile_error_desc_admin">Uh-oh, you can\'t submit request, Please contact admin!</string>
    <string name="esp_lib_text_profile_error_cancel">CANCEL</string>
    <string name="esp_lib_text_profile_complete" translatable="false">COMPLETE</string>
    <string name="esp_lib_text_verified" translatable="false">Your face is Verified</string>
    <string name="esp_lib_text_unverified" translatable="false">UnVerified</string>
    <string name="esp_lib_text_uploaded" translatable="false">Uploaded</string>
    <string name="esp_lib_text_nopicture" translatable="false">NoPicture</string>
    <string name="esp_lib_text_no_camera" translatable="false">Sorry, your phone does not have a camera!</string>
    <string name="esp_lib_text_no_front_cam" translatable="false">No front facing camera found</string>
    <string name="esp_lib_text_upload_profile_image" translatable="false">Please upload profile image to continue</string>
    <string name="esp_lib_text_face_not_verified" translatable="false">Your face is not Verified, please try again</string>
    <string name="esp_lib_text_not_verified" translatable="false">Not Verified</string>
    <string name="esp_lib_text_profile_incomplete" translatable="false">IN-COMPLETE</string>
    <string name="esp_lib_text_profile_verification" translatable="false">Verification</string>
    <string name="esp_lib_text_profile_incomplete_admin" translatable="false">IN-COMPLETE-BY-ADMIN</string>
    <string name="esp_lib_text_forgot_password">Forgot Password</string>
    <string name="esp_lib_text_request_reject_error">This request has been rejected incorrect ticket. Please submit a new request with the correct information.</string>
    <string name="esp_lib_text_submitted_on">Submitted on</string>
    <string name="esp_lib_text_request">Request </string>
    <string name="esp_lib_text_newversionavailable">New Version Available</string>
    <string name="esp_lib_text_updatenow">Update now</string>
    <string name="esp_lib_text_newversionavailabletext">A new version of this app is available in the Play Store, Please download new version of this App.</string>
    <string name="esp_lib_text_requestedby">Requested By:</string>
    <string name="esp_lib_text_feed" translatable="false">Feed</string>
    <string name="esp_lib_text_feeds" translatable="false">Feeds</string>
    <string name="esp_lib_text_mine" translatable="false">Mine</string>
    <string name="esp_lib_text_requests">Requests</string>
    <string name="esp_lib_text_open_requests" translatable="false">Open Requests</string>
    <string name="esp_lib_text_closed_requests" translatable="false">Closed Requests</string>
    <string name="esp_lib_text_by_status">By Status</string>
    <string name="esp_lib_text_by_definition">By Definitions</string>
    <string name="esp_lib_text_sortby">Sort By</string>
    <string name="esp_lib_text_filters">Filters</string>
    <string name="esp_lib_text_close" translatable="false">Close</string>
    <string name="esp_lib_text_closed">Closed</string>
    <string name="esp_lib_text_closedsmall">closed</string>
    <string name="esp_lib_text_assigned" translatable="false">Assigned</string>
    <string name="esp_lib_text_filter">Filter</string>
    <string name="esp_lib_text_parentapplication">Parent Application:</string>
    <string name="esp_lib_text_filter_error">Please select atleast one status filter to proceed</string>
    <string name="esp_lib_text_definition_filter_error">Please select atleast one definition filter to proceed</string>
    <string name="esp_lib_text_reset">Reset</string>
    <string name="esp_lib_text_cancel">Cancel</string>
    <string name="esp_lib_text_stop" translatable="false">Stop</string>
    <string name="esp_lib_text_verify_your_identity" translatable="false">Please verify your identity</string>
    <string name="esp_lib_text_verify_your_identity_text" translatable="false">To accept this criteria we have to verify your identity. It will take only a few seconds.</string>
    <string name="esp_lib_text_completeprofile">Complete your profile</string>
    <string name="esp_lib_text_completeprofiletext">In order to submit application, you need to complete your profile.</string>
    <string name="esp_lib_text_continuee">Continue</string>
    <string name="esp_lib_text_allow" translatable="false">Allow</string>
    <string name="esp_lib_text_start_verification" translatable="false">Start Verification</string>
    <string name="esp_lib_text_retake_photo" translatable="false">Retake a Photo</string>
    <string name="esp_lib_text_use_your_camera" translatable="false">to use your camera.</string>
    <string name="esp_lib_text_ensure_light" translatable="false">Ensure that there is enough light in room.</string>
    <string name="esp_lib_text_verfication_process" translatable="false">Verification process…</string>
    <string name="esp_lib_text_verfication_verified" translatable="false">Verified</string>
    <string name="esp_lib_text_verfication_mismatch_text" translatable="false">There is a mismatch between your ESP profile picture and the current photo.</string>
    <string name="esp_lib_text_take_problem_appear" translatable="false">If this problem will appear again:</string>
    <string name="esp_lib_text_take_problem_enough_light" translatable="false">ensure that there is enough light in the room</string>
    <string name="esp_lib_text_take_problem_check_profile_pic" translatable="false">check your ESP profile picture</string>
    <string name="esp_lib_text_take_problem_contact_support" translatable="false">contact our support team</string>
    <string name="esp_lib_text_take_photo_dot" translatable="false">Take a Photo.</string>
    <string name="esp_lib_text_stopsubmissiontext">Are you sure you want to stop the submissions?</string>
    <string name="esp_lib_text_stopsubmissiondescription" translatable="false">After that, you won\'t receive any submissions for this request anymore.</string>
</resources>