<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivcross"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/_2sdp"
        android:layout_gravity="end"
        android:src="@drawable/esp_lib_drawable_ic_cross"/>

    <com.esp.library.utilities.customcontrols.ESP_LIB_BodyText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esp_lib_text_stopsubmissiontext"
        android:background="@color/esp_lib_color_white"
        style="@style/Esp_Lib_Style_TextHeading1Black"/>


    <com.esp.library.utilities.customcontrols.ESP_LIB_BodyText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/esp_lib_text_stopsubmissiondescription"
        android:background="@color/esp_lib_color_white"
        style="@style/Esp_Lib_Style_TextSubHeaderBlack"/>


    <LinearLayout
        android:id="@+id/rlbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:background="@color/esp_lib_color_white"
        android:layout_below="@+id/llfeedback">


        <com.esp.library.utilities.customcontrols.ESP_LIB_CustomButton
            android:id="@+id/btcancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/esp_lib_text_cancel"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center_horizontal|center_vertical"
            style="@style/Esp_Lib_Style_TextHeading3Green"
            android:background="@drawable/esp_lib_drawable_draw_bg_green_stroke"/>


        <com.esp.library.utilities.customcontrols.ESP_LIB_CustomButton
            android:id="@+id/btstop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/esp_lib_text_stop"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/esp_lib_drawable_draw_bg_green"
            style="@style/Esp_Lib_Style_TextHeading3White"/>

    </LinearLayout>


</LinearLayout>