<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_60sdp"
        android:src="@drawable/ic_no_profile" />

    <com.esp.library.utilities.customcontrols.ESP_LIB_BodyText
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/esp_lib_text_completeprofile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_18ssp"
        custom:customfont="regular" />

    <com.esp.library.utilities.customcontrols.ESP_LIB_BodyText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/esp_lib_text_completeprofiletext"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13ssp"
        custom:customfont="regular" />

    <com.esp.library.utilities.customcontrols.ESP_LIB_CustomButton
        android:id="@+id/btcontinuee"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/esp_lib_drawable_draw_signin_button"
        android:text="@string/esp_lib_text_continuee"
        android:textAllCaps="false"
        android:textColor="@color/esp_lib_color_white"
        android:textSize="@dimen/_15ssp" />

</LinearLayout>